[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Panel.png" type="Texture" id=1]
[ext_resource path="res://Resources/PixelFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Achievements.gd" type="Script" id=3]
[ext_resource path="res://Themes/Button9Slice.tres" type="StyleBox" id=4]
[ext_resource path="res://Themes/Button9SlicePressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Themes/Button9SliceHover.tres" type="StyleBox" id=6]

[node name="Achievements" type="Sprite"]
position = Vector2( 232, 3 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 37.0
margin_top = 8.0
margin_right = 146.0
margin_bottom = 328.0

[node name="AchievmentHeaderLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 109.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Achievements"
align = 1

[node name="HealthAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 109.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneVirusAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 109.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneWormAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 109.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneSpamEmailAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 109.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneMalwareAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 109.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneHackerAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 109.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneCryptoMinerAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 109.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneTwoEightVirusAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 109.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneTwoEightWormAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 109.0
margin_bottom = 196.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneTwoEightSpamEmailAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 109.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneTwoEightMalwareAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 109.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneTwoEightHackerAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 109.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="OneTwoEightCryptoMinerAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 109.0
margin_bottom = 276.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="HackerAchievementLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 109.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 2 )
text = "???"
align = 1

[node name="CloseButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 109.0
margin_bottom = 320.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
text = "Close"
[connection signal="pressed" from="CenterContainer/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
